--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node_tasks",
-  "version": "1.0.0",
-  "description": "node.jsで実装環境を作る",
+  "version": "1.1.0",
+  "description": "node.js実装環境",
   "main": "index.js",
   "scripts": {
     "build": "run-p webpack:prod tasks:prod",
