--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node_tasks",
-  "version": "1.3.5",
+  "version": "1.4.0",
   "description": "node.js実装環境",
   "main": "index.js",
   "scripts": {
@@ -19,40 +19,41 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.8.4",
-    "@babel/plugin-transform-object-assign": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.8.3",
-    "@babel/polyfill": "^7.8.3",
-    "@babel/preset-env": "^7.8.4",
-    "@babel/register": "^7.8.3",
-    "@babel/runtime-corejs3": "^7.8.4",
-    "autoprefixer": "^9.7.4",
-    "babel-loader": "^8.0.6",
-    "browser-sync": "^2.26.12",
-    "chokidar": "^3.3.1",
-    "cross-env": "^7.0.0",
+    "@babel/cli": "^7.12.1",
+    "@babel/core": "^7.12.3",
+    "@babel/plugin-transform-object-assign": "^7.12.1",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/register": "^7.12.1",
+    "@babel/runtime-corejs3": "^7.12.5",
+    "autoprefixer": "^9.8.6",
+    "babel-loader": "^8.1.0",
+    "browser-sync": "^2.26.13",
+    "chokidar": "^3.4.3",
+    "cross-env": "^7.0.2",
+    "css-loader": "^5.0.0",
     "del": "^5.1.0",
-    "ejs": "^3.0.1",
+    "ejs": "^3.1.5",
     "ejs-lint": "^1.1.0",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "fs-extra": "^8.1.0",
     "glob": "^7.1.6",
-    "js-yaml": "^3.13.1",
+    "js-yaml": "^3.14.0",
     "node-sass": "^4.14.1",
     "node-sass-globbing": "0.0.23",
     "npm-run-all": "^4.1.5",
-    "postcss": "^7.0.26",
-    "vue-loader": "^15.9.0",
-    "vue-template-compiler": "^2.6.11",
-    "webpack": "^4.41.6",
-    "webpack-cli": "^3.3.11"
+    "postcss": "^7.0.35",
+    "vue-loader": "^15.9.5",
+    "vue-template-compiler": "^2.6.12",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12"
   },
   "dependencies": {
-    "core-js": "^3.6.4",
-    "swiper": "^5.3.1",
-    "vue": "^2.6.11"
+    "core-js": "^3.6.5",
+    "swiper": "^5.4.5",
+    "vue": "^2.6.12"
   }
 }
