--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node_tasks",
-  "version": "1.4.3",
+  "version": "1.4.4",
   "description": "node.js実装環境",
   "main": "index.js",
   "scripts": {
@@ -53,6 +53,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "intersection-observer": "^0.11.0",
     "swiper": "^5.4.5",
     "vue": "^2.6.12"
   }
