--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "optim": "npm run optim:png && npm run optim:jpg",
     "optim:png": "find . -name '*.png' | xargs pngquant --ext .png --force -v",
     "optim:jpg": "find . -name '*.jpg' | xargs jpegoptim --strip-all --max=90",
-    "lint:ejs": "ejslint 'src/**/*.{ejs,html}'"
+    "lint:ejs": "ejslint 'src/**/*.{ejs,html}'",
+    "lint": "eslint src/** --ext .ts,.tsx"
   },
   "browserslist": [
     "last 2 version",
@@ -28,30 +29,32 @@
     "@types/fs-extra": "^9.0.7",
     "@types/js-yaml": "^4.0.0",
     "@types/sass": "^1.16.0",
+    "@typescript-eslint/eslint-plugin": "^4.15.2",
+    "@typescript-eslint/parser": "^4.15.2",
     "autoprefixer": "^9.8.6",
     "browser-sync": "^2.26.14",
-    "chokidar": "^3.4.3",
+    "chokidar": "^3.5.1",
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.2",
-    "del": "^5.1.0",
+    "del": "^6.0.0",
     "ejs": "^3.1.6",
     "ejs-lint": "^1.1.0",
     "eslint": "^7.20.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-config-prettier": "^8.0.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "fs-extra": "^9.1.0",
     "glob": "^7.1.6",
     "js-yaml": "^4.0.0",
     "npm-run-all": "^4.1.5",
-    "postcss": "^7.0.35",
+    "postcss": "^8.2.6",
+    "prettier": "^2.2.1",
     "sass": "^1.32.8",
     "typescript": "^4.1.5",
     "webpack": "^5.24.0",
     "webpack-cli": "^4.5.0"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
-    "intersection-observer": "^0.11.0",
+    "intersection-observer": "^0.12.0",
     "objectFitPolyfill": "^2.3.5",
     "source-map-loader": "^2.0.1",
     "swiper": "^5.4.5",
