--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node_tasks",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "node.js実装環境",
   "main": "index.js",
   "private": true,
@@ -15,11 +15,14 @@
     "optim:png": "find . -name '*.png' | xargs pngquant --ext .png --force -v",
     "optim:jpg": "find . -name '*.jpg' | xargs jpegoptim --strip-all --max=90",
     "lint:ejs": "ejslint 'src/**/*.{ejs,html}'",
-    "lint": "eslint src/** --ext .ts,.tsx"
+    "lint": "eslint 'src/assets/js/**/*' --fix --ext .ts,.tsx"
   },
   "browserslist": [
     "last 2 version",
     "IE 11"
+  ],
+  "eslintIgnore": [
+    "/.eslintrc.js"
   ],
   "author": "",
   "license": "ISC",
@@ -41,7 +44,6 @@
     "ejs-lint": "^1.1.0",
     "eslint": "^7.20.0",
     "eslint-config-prettier": "^8.0.0",
-    "eslint-plugin-prettier": "^3.3.1",
     "fs-extra": "^9.1.0",
     "glob": "^7.1.6",
     "js-yaml": "^4.0.0",
