--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node_tasks",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "description": "node.js実装環境",
   "main": "index.js",
   "private": true,
@@ -51,15 +51,19 @@
     "postcss": "^8.2.6",
     "prettier": "^2.2.1",
     "sass": "^1.32.8",
+    "source-map-loader": "^2.0.1",
+    "ts-loader": "^8.0.17",
     "typescript": "^4.1.5",
     "webpack": "^5.24.0",
     "webpack-cli": "^4.5.0"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "gsap": "^3.6.0",
     "intersection-observer": "^0.12.0",
+    "jquery": "^3.5.1",
+    "jump.js": "^1.0.2",
     "objectFitPolyfill": "^2.3.5",
-    "source-map-loader": "^2.0.1",
-    "swiper": "^5.4.5",
-    "ts-loader": "^8.0.17"
+    "swiper": "^5.4.5"
   }
 }
