--- a/package.json
+++ b/package.json
@@ -58,12 +58,16 @@
     "webpack-cli": "^4.5.0"
   },
   "dependencies": {
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
     "axios": "^0.21.1",
     "gsap": "^3.6.0",
     "intersection-observer": "^0.12.0",
     "jquery": "^3.5.1",
     "jump.js": "^1.0.2",
     "objectFitPolyfill": "^2.3.5",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "swiper": "^5.4.5"
   }
 }
