--- a/package.json
+++ b/package.json
@@ -32,8 +32,13 @@
     "@types/autoprefixer": "^10.2.0",
     "@types/browser-sync": "^2.26.1",
     "@types/fs-extra": "^9.0.7",
+    "@types/jquery": "^3.5.5",
     "@types/js-yaml": "^4.0.0",
+    "@types/jump.js": "^1.0.3",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
     "@types/sass": "^1.16.0",
+    "@types/swiper": "^5.4.2",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.15.2",
     "@wordpress/env": "^3.0.2",
@@ -61,8 +66,6 @@
     "webpack-cli": "^4.5.0"
   },
   "dependencies": {
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.1",
     "axios": "^0.21.1",
     "gsap": "^3.6.0",
     "intersection-observer": "^0.12.0",
