--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node_tasks",
-  "version": "2.2.2",
+  "version": "2.2.3",
   "description": "node.js実装環境",
   "main": "index.js",
   "private": true,
@@ -54,6 +54,7 @@
     "eslint-config-prettier": "^8.0.0",
     "fs-extra": "^9.1.0",
     "glob": "^7.1.6",
+    "js-beautify": "^1.13.13",
     "js-yaml": "^4.0.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.2.6",
@@ -67,6 +68,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "current-device": "^0.10.2",
     "gsap": "^3.6.0",
     "intersection-observer": "^0.12.0",
     "jquery": "^3.5.1",
@@ -74,6 +76,6 @@
     "objectFitPolyfill": "^2.3.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "swiper": "^5.4.5"
+    "swiper": "^6.5.7"
   }
 }
