--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "moduleResolution": "node",
     "baseUrl": "./",
     "paths": {
-      "*": ["./src/@types/*"]
+      "*": ["./src/@types/*"],
+      "@/*": ["src/assets/js/*"]
     },
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
