--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node_tasks",
-  "version": "2.6.3",
-  "description": "node.js実装環境",
+  "version": "2.7.0",
+  "description": "node.js task",
   "main": "index.js",
   "private": true,
   "scripts": {
@@ -30,52 +30,52 @@
   "license": "ISC",
   "devDependencies": {
     "@types/autoprefixer": "^10.2.0",
-    "@types/browser-sync": "^0.0.42",
-    "@types/fs-extra": "^9.0.7",
-    "@types/jquery": "^3.5.5",
-    "@types/js-yaml": "^4.0.0",
-    "@types/jump.js": "^1.0.3",
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.1",
-    "@types/sass": "^1.16.0",
-    "@types/swiper": "^5.4.2",
-    "@typescript-eslint/eslint-plugin": "^4.15.2",
-    "@typescript-eslint/parser": "^4.15.2",
-    "@wordpress/env": "^4.0.5",
-    "autoprefixer": "^10.3.1",
-    "browser-sync": "^2.26.14",
-    "chokidar": "^3.5.1",
+    "@types/browser-sync": "^2.26.2",
+    "@types/fs-extra": "^9.0.12",
+    "@types/jquery": "^3.5.6",
+    "@types/js-yaml": "^4.0.3",
+    "@types/jump.js": "^1.0.4",
+    "@types/react": "^17.0.20",
+    "@types/react-dom": "^17.0.9",
+    "@types/sass": "^1.16.1",
+    "@types/swiper": "^5.4.3",
+    "@typescript-eslint/eslint-plugin": "^4.30.0",
+    "@typescript-eslint/parser": "^4.30.0",
+    "@wordpress/env": "^4.1.0",
+    "autoprefixer": "^10.3.4",
+    "browser-sync": "^2.27.5",
+    "chokidar": "^3.5.2",
     "cross-env": "^7.0.3",
-    "css-loader": "^5.0.2",
+    "css-loader": "^6.2.0",
     "del": "^6.0.0",
     "ejs": "^3.1.6",
-    "ejs-lint": "^1.1.0",
-    "eslint": "^7.20.0",
-    "eslint-config-prettier": "^8.0.0",
-    "fs-extra": "^9.1.0",
-    "glob": "^7.1.6",
-    "js-beautify": "^1.13.13",
-    "js-yaml": "^4.0.0",
+    "ejs-lint": "^1.2.1",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "fs-extra": "^10.0.0",
+    "glob": "^7.1.7",
+    "js-beautify": "^1.14.0",
+    "js-yaml": "^4.1.0",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.2.10",
-    "prettier": "^2.2.1",
-    "sass": "^1.32.12",
-    "source-map-loader": "^2.0.1",
-    "ts-loader": "^8.0.17",
-    "typescript": "^4.1.5",
-    "webpack": "^5.24.0",
-    "webpack-cli": "^4.5.0"
+    "postcss": "^8.3.6",
+    "prettier": "^2.3.2",
+    "sass": "^1.39.0",
+    "source-map-loader": "^3.0.0",
+    "ts-loader": "^9.2.5",
+    "typescript": "^4.4.2",
+    "webpack": "^5.52.0",
+    "webpack-cli": "^4.8.0"
   },
   "dependencies": {
-    "axios": "^0.21.1",
+    "axios": "^0.21.3",
     "current-device": "^0.10.2",
-    "gsap": "^3.6.0",
+    "gsap": "^3.7.1",
     "intersection-observer": "^0.12.0",
-    "jquery": "^3.5.1",
+    "jquery": "^3.6.0",
     "jump.js": "^1.0.2",
     "objectFitPolyfill": "^2.3.5",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "swiper": "^6.5.7"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "swiper": "^7.0.3"
   }
 }
