--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "name": "node_tasks",
-  "version": "2.8.0",
+  "version": "2.8.1",
   "description": "node.js task",
   "main": "index.js",
   "private": true,
   "scripts": {
+    "prod": "run-s build del-dummy",
     "build": "run-p webpack:prod tasks:prod",
     "dev": "run-p webpack:dev tasks:dev",
-    "tasks:prod": "node ./tasks/index.js",
-    "tasks:dev": "cross-env NODE_ENV=\"dev\" node ./tasks/index.js",
-    "webpack:prod": "webpack",
-    "webpack:dev": "cross-env NODE_ENV=\"dev\" webpack",
+    "dev-param": "cross-env PARAM1=\"100\" PARAM2=\"200\" PARAM3=\"300\" run-p webpack:dev tasks:dev",
+    "tasks:prod": "cross-env NODE_ENV=\"production\" node ./tasks/index.js",
+    "tasks:dev": "cross-env NODE_ENV=\"development\" node ./tasks/index.js",
+    "webpack:prod": "cross-env NODE_ENV=\"production\" webpack",
+    "webpack:dev": "cross-env NODE_ENV=\"development\" webpack",
+    "del-dummy": "rm -R htdocs/assets/json/_dummy htdocs/assets/img/_dummy htdocs/assets/movie/_dummy",
     "optim": "npm run optim:png && npm run optim:jpg",
     "optim:png": "find . -name '*.png' | xargs pngquant --ext .png --force -v",
     "optim:jpg": "find . -name '*.jpg' | xargs jpegoptim --strip-all --max=90",
@@ -48,6 +51,7 @@
     "cross-env": "^7.0.3",
     "css-loader": "^6.4.0",
     "del": "^6.0.0",
+    "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "ejs-lint": "^1.2.1",
     "eslint": "^8.0.0",
