wordpressテンプレート 途中

--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,9 @@
     "wp-default-theme-delete": "wp-env run cli wp theme delete twentyeleven twentytwelve twentythirteen twentyfourteen twentyfifteen twentysixteen twentyseventeen twentynineteen twentytwentyone twentytwenty twentyten",
     "wp-backup": "wp-env run cli 'wp ai1wm backup --exclude-spam-comments --exclude-post-revisions --exclude-themes --exclude-inactive-themes --exclude-muplugins --exclude-plugins --exclude-inactive-plugins --exclude-cache --exclude-email-replace --exclude-media'",
     "wp-restore": "wp-env run cli wp ai1wm restore",
-    "wp-list": "wp-env run cli wp ai1wm list-backups"
+    "wp-list": "wp-env run cli wp ai1wm list-backups",
+    "wp-cli": "wp-env run cli",
+    "wp-destroy": "wp-env destroy"
   },
   "browserslist": [
     "last 2 version",
