php_codesniffer を導入

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,3 +1,9 @@
 # plugins
 wp-content/plugins/advanced-custom-fields-pro
 wp-content/plugins/all-in-one-wp-migration-unlimited-extension
+
+# phpDocumentor
+.phpdoc
+
+# composer
+vendor/
