--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,9 +21,7 @@
     "lint:ejs": "ejslint 'src/**/*.{ejs,html}'",
     "lint": "eslint 'src/assets/js/**/*' --fix --ext .ts,.tsx"
   },
-  "browserslist": [
-    "last 2 version"
-  ],
+  "browserslist": [],
   "eslintIgnore": [
     "/.eslintrc.js"
   ],
@@ -32,51 +30,51 @@
   "devDependencies": {
     "@types/autoprefixer": "^10.2.0",
     "@types/browser-sync": "^2.26.3",
-    "@types/fs-extra": "^9.0.13",
-    "@types/jquery": "^3.5.14",
+    "@types/fs-extra": "^11.0.1",
+    "@types/jquery": "^3.5.16",
     "@types/js-yaml": "^4.0.5",
     "@types/jump.js": "^1.0.4",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.5",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
     "@types/sass": "^1.43.1",
     "@types/swiper": "^5.4.3",
-    "@typescript-eslint/eslint-plugin": "^5.26.0",
-    "@typescript-eslint/parser": "^5.26.0",
-    "autoprefixer": "^10.4.7",
-    "browser-sync": "^2.27.10",
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "@typescript-eslint/parser": "^5.48.2",
+    "autoprefixer": "^10.4.13",
+    "browser-sync": "^2.27.11",
     "chokidar": "^3.5.3",
     "cross-env": "^7.0.3",
-    "css-loader": "^6.7.1",
-    "del": "^6.1.1",
-    "dotenv": "^16.0.1",
+    "css-loader": "^6.7.3",
+    "del": "^7.0.0",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
-    "ejs-lint": "^1.2.2",
-    "eslint": "^8.16.0",
-    "eslint-config-prettier": "^8.5.0",
-    "express": "^4.18.1",
-    "fs-extra": "^10.1.0",
-    "glob": "^8.0.3",
+    "ejs-lint": "^2.0.0",
+    "eslint": "^8.32.0",
+    "eslint-config-prettier": "^8.6.0",
+    "express": "^4.18.2",
+    "fs-extra": "^11.1.0",
+    "glob": "^8.1.0",
     "http-proxy-middleware": "^2.0.6",
-    "js-beautify": "^1.14.3",
+    "js-beautify": "^1.14.7",
     "js-yaml": "^4.1.0",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.14",
-    "prettier": "^2.6.2",
-    "sass": "^1.52.1",
-    "source-map-loader": "^3.0.1",
-    "ts-loader": "^9.3.0",
-    "typescript": "^4.7.2",
-    "webpack": "^5.72.1",
-    "webpack-cli": "^4.9.2"
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.3",
+    "sass": "^1.57.1",
+    "source-map-loader": "^4.0.1",
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.4",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   },
   "dependencies": {
-    "axios": "^0.27.2",
+    "axios": "^1.2.3",
     "current-device": "^0.10.2",
-    "gsap": "^3.10.4",
-    "jquery": "^3.6.0",
+    "gsap": "^3.11.4",
+    "jquery": "^3.6.3",
     "jump.js": "^1.0.2",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "swiper": "^8.1.6"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "swiper": "^8.4.6"
   }
 }
