--- a/frontend/package.json
+++ b/frontend/package.json
@@ -64,12 +64,12 @@
   },
   "dependencies": {
     "axios": "^1.2.3",
-    "current-device": "^0.10.2",
     "gsap": "^3.11.4",
     "jquery": "^3.6.3",
     "jump.js": "^1.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "swiper": "^8.4.6"
+    "swiper": "^8.4.6",
+    "ua-parser-js": "^1.0.33"
   }
 }
