--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "webpack:dev": "cross-env NODE_ENV=\"development\" webpack",
     "del-dummy": "rm -R htdocs/assets/json/_dummy htdocs/assets/img/_dummy htdocs/assets/movie/_dummy",
     "lint:ejs": "ejslint 'src/**/*.{ejs,html}'",
-    "lint": "eslint 'src/assets/js/**/*' --fix --ext .ts,.tsx"
+    "lint": "eslint 'src/assets/js/**/*' --fix --ext .ts,.tsx",
+    "prepare": "husky install"
   },
   "browserslist": [],
   "eslintIgnore": [
@@ -47,7 +48,9 @@
     "fs-extra": "^11.1.0",
     "glob": "^8.1.0",
     "http-proxy-middleware": "^2.0.6",
+    "husky": "^8.0.3",
     "js-beautify": "^1.14.7",
+    "lint-staged": "^13.1.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
