--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,7 @@
     "webpack:dev": "cross-env NODE_ENV=\"development\" webpack",
     "del-dummy": "rm -R htdocs/assets/json/_dummy htdocs/assets/img/_dummy htdocs/assets/movie/_dummy",
     "lint:ejs": "ejslint 'src/**/*.{ejs,html}'",
-    "lint": "eslint 'src/assets/js/**/*' --fix --ext .ts,.tsx",
-    "prepare": "husky install"
+    "lint": "eslint 'src/assets/js/**/*' --fix --ext .ts,.tsx"
   },
   "browserslist": [],
   "eslintIgnore": [
@@ -24,15 +23,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/autoprefixer": "^10.2.0",
-    "@types/browser-sync": "^2.26.3",
-    "@types/fs-extra": "^11.0.1",
     "@types/jquery": "^3.5.16",
     "@types/jump.js": "^1.0.4",
-    "@types/react": "^18.0.26",
+    "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
-    "@typescript-eslint/eslint-plugin": "^5.48.2",
-    "@typescript-eslint/parser": "^5.48.2",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
     "autoprefixer": "^10.4.13",
     "browser-sync": "^2.27.11",
     "chokidar": "^3.5.3",
@@ -42,7 +38,7 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "ejs-lint": "^2.0.0",
-    "eslint": "^8.32.0",
+    "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
     "express": "^4.18.2",
     "fs-extra": "^11.1.0",
@@ -57,18 +53,18 @@
     "sass": "^1.57.1",
     "source-map-loader": "^4.0.1",
     "ts-loader": "^9.4.2",
-    "typescript": "^4.9.4",
+    "typescript": "^4.9.5",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   },
   "dependencies": {
-    "axios": "^1.2.3",
+    "axios": "^1.2.6",
     "gsap": "^3.11.4",
     "jquery": "^3.6.3",
     "jump.js": "^1.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "swiper": "^8.4.6",
+    "swiper": "^8.4.7",
     "ua-parser-js": "^1.0.33"
   }
 }
