--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "backend_tasks",
-  "version": "1.1.0",
+  "version": "1.0.0",
   "description": "node.js backend_tasks",
   "main": "index.js",
   "private": true,
@@ -15,10 +15,7 @@
     "wp-cli": "wp-env run cli",
     "wp-destroy": "wp-env destroy"
   },
-  "browserslist": [
-    "last 2 version",
-    "IE 11"
-  ],
+  "browserslist": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
